// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Any empty @fake/fake@ 1`] = `
{
  "_parsePackageNameCore": {
    "name": "@fake/fake",
    "result": {
      "escapedName": "@fake%2ffake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@fake/fake",
      "raw": "@fake/fake@",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@fake",
      "type": "range",
      "where": undefined,
    },
    "scope": "@fake",
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "@fake/fake@",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "@fake%2ffake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@fake/fake",
    "raw": "@fake/fake@",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@fake",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any empty @fake/fake@ 2`] = `
{
  "_parsePackageNameCore": {
    "name": "@fake/fake",
    "result": {
      "escapedName": "@fake%2ffake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@fake/fake",
      "raw": "@fake/fake@",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@fake",
      "type": "range",
      "where": undefined,
    },
    "scope": "@fake",
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "@fake/fake@",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "@fake%2ffake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@fake/fake",
    "raw": "@fake/fake@",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@fake",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any empty empty 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "",
  "inputSpec": "",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": undefined,
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": undefined,
    "raw": "",
    "rawSpec": "",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any empty empty 2`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "",
  "inputSpec": "",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": undefined,
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": undefined,
    "raw": "",
    "rawSpec": "",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any empty fake@ 1`] = `
{
  "_parsePackageNameCore": {
    "name": "fake",
    "result": {
      "escapedName": "fake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "fake",
      "raw": "fake@",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "fake@",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "fake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "fake",
    "raw": "fake@",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any empty fake@ 2`] = `
{
  "_parsePackageNameCore": {
    "name": "fake",
    "result": {
      "escapedName": "fake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "fake",
      "raw": "fake@",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "fake@",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "fake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "fake",
    "raw": "fake@",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any space @fake/fake@  1`] = `
{
  "_parsePackageNameCore": {
    "name": "@fake/fake",
    "result": {
      "escapedName": "@fake%2ffake",
      "fetchSpec": "",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@fake/fake",
      "raw": "@fake/fake@ ",
      "rawSpec": " ",
      "registry": true,
      "saveSpec": null,
      "scope": "@fake",
      "type": "range",
      "where": undefined,
    },
    "scope": "@fake",
    "semver": " ",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": " ",
  "inputSpec": "@fake/fake@ ",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": "@fake%2ffake",
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@fake/fake",
    "raw": "@fake/fake@ ",
    "rawSpec": " ",
    "registry": true,
    "saveSpec": null,
    "scope": "@fake",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any space @fake/fake@  2`] = `
{
  "_parsePackageNameCore": {
    "name": "@fake/fake",
    "result": {
      "escapedName": "@fake%2ffake",
      "fetchSpec": "",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@fake/fake",
      "raw": "@fake/fake@ ",
      "rawSpec": " ",
      "registry": true,
      "saveSpec": null,
      "scope": "@fake",
      "type": "range",
      "where": undefined,
    },
    "scope": "@fake",
    "semver": " ",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": " ",
  "inputSpec": "@fake/fake@ ",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": "@fake%2ffake",
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@fake/fake",
    "raw": "@fake/fake@ ",
    "rawSpec": " ",
    "registry": true,
    "saveSpec": null,
    "scope": "@fake",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any space fake@  1`] = `
{
  "_parsePackageNameCore": {
    "name": "fake",
    "result": {
      "escapedName": "fake",
      "fetchSpec": "",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "fake",
      "raw": "fake@ ",
      "rawSpec": " ",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": " ",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": " ",
  "inputSpec": "fake@ ",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": "fake",
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "fake",
    "raw": "fake@ ",
    "rawSpec": " ",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any space fake@  2`] = `
{
  "_parsePackageNameCore": {
    "name": "fake",
    "result": {
      "escapedName": "fake",
      "fetchSpec": "",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "fake",
      "raw": "fake@ ",
      "rawSpec": " ",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": " ",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": " ",
  "inputSpec": "fake@ ",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": "fake",
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "fake",
    "raw": "fake@ ",
    "rawSpec": " ",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any space space 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": " ",
  "inputSpec": " ",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": undefined,
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": undefined,
    "raw": " ",
    "rawSpec": " ",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any space space 2`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": " ",
  "inputSpec": " ",
  "isInputSpecIsEmpty": true,
  "isInputSpecIsStar": false,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": true,
  "result": {
    "escapedName": undefined,
    "fetchSpec": "",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": undefined,
    "raw": " ",
    "rawSpec": " ",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any star @fake/fake@* 1`] = `
{
  "_parsePackageNameCore": {
    "name": "@fake/fake",
    "result": {
      "escapedName": "@fake%2ffake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@fake/fake",
      "raw": "@fake/fake@*",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@fake",
      "type": "range",
      "where": undefined,
    },
    "scope": "@fake",
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "@fake/fake@*",
  "isInputSpecIsEmpty": false,
  "isInputSpecIsStar": true,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "@fake%2ffake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@fake/fake",
    "raw": "@fake/fake@*",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@fake",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any star @fake/fake@* 2`] = `
{
  "_parsePackageNameCore": {
    "name": "@fake/fake",
    "result": {
      "escapedName": "@fake%2ffake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "@fake/fake",
      "raw": "@fake/fake@*",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": "@fake",
      "type": "range",
      "where": undefined,
    },
    "scope": "@fake",
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "@fake/fake@*",
  "isInputSpecIsEmpty": false,
  "isInputSpecIsStar": true,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "@fake%2ffake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@fake/fake",
    "raw": "@fake/fake@*",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@fake",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any star fake@* 1`] = `
{
  "_parsePackageNameCore": {
    "name": "fake",
    "result": {
      "escapedName": "fake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "fake",
      "raw": "fake@*",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "fake@*",
  "isInputSpecIsEmpty": false,
  "isInputSpecIsStar": true,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "fake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "fake",
    "raw": "fake@*",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any star fake@* 2`] = `
{
  "_parsePackageNameCore": {
    "name": "fake",
    "result": {
      "escapedName": "fake",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "fake",
      "raw": "fake@*",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "fake",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "fake@*",
  "isInputSpecIsEmpty": false,
  "isInputSpecIsStar": true,
  "isNameSameAsRaw": false,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "fake",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "fake",
    "raw": "fake@*",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any star star 1`] = `
{
  "_parsePackageNameCore": {
    "name": "*",
    "result": {
      "escapedName": "*",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "*",
      "raw": "*",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "*",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "*",
  "isInputSpecIsEmpty": false,
  "isInputSpecIsStar": true,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "*",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "*",
    "raw": "*",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`Any star star 2`] = `
{
  "_parsePackageNameCore": {
    "name": "*",
    "result": {
      "escapedName": "*",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "*",
      "raw": "*",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "*",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "*",
  "isInputSpecIsEmpty": false,
  "isInputSpecIsStar": true,
  "isNameSameAsRaw": true,
  "isRawSpecIsEmpty": false,
  "result": {
    "escapedName": "*",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "*",
    "raw": "*",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;
